--- a/app/assets/stylesheets/front/_settings-theme-ind.scss
+++ b/app/assets/stylesheets/front/_settings-theme-ind.scss
@@ -10,6 +10,17 @@
   src: font-url('fonts/Acumin_Pro_Condensed/acuminprocond-bold.otf');
 }
 
+// Trick: the Lato font doesn't exist in this project
+// so we hook it up to the Acumin Pro
+// The font is used by the widgets rendered in the
+// open content pages (the font is part of the Vega
+// config)
+@font-face {
+  font-family: 'Lato';
+  font-weight: 400;
+  src: font-url('fonts/Acumin_Pro_Condensed/acuminprocond-light.otf');
+}
+
 // Font families
 $font-family-1: 'Acumin Pro', sans-serif;
 $font-family-2: 'Acumin Pro', sans-serif;
