--- a/app/assets/stylesheets/front/_settings-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_settings-theme-lsa.scss
@@ -31,6 +31,17 @@
   src: font-url('fonts/Merriweather/MerriweatherSans-Light.ttf');
 }
 
+// Trick: the Lato font doesn't exist in this project
+// so we hook it up to the Merriweather
+// The font is used by the widgets rendered in the
+// open content pages (the font is part of the Vega
+// config)
+@font-face {
+  font-family: 'Lato';
+  font-weight: 400;
+  src: font-url('fonts/Merriweather/Merriweather-Regular.ttf');
+}
+
 // Font families
 $font-family-1: 'Merriweather Sans', sans-serif;
 $font-family-2: 'Merriweather', serif;
