--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -302,29 +302,29 @@
       }
     }
 
-    .caption {
-      display: block;
-      width: 100%;
-      max-width: 100%;
-      margin-top: 12px;
-      font-size: $font-size-s-normal;
-      font-style: italic;
-      font-weight: $font-weight-light;
-      text-align: right;
+    // .caption {
+    //   display: block;
+    //   width: 100%;
+    //   max-width: 100%;
+    //   margin-top: 12px;
+    //   font-size: $font-size-s-normal;
+    //   font-style: italic;
+    //   font-weight: $font-weight-light;
+    //   text-align: right;
 
-      @if $theme == 1 {
-        font-family: $font-family-2;
-      }
+    //   @if $theme == 1 {
+    //     font-family: $font-family-2;
+    //   }
 
-      @media #{$mq-mobile} {
-        margin: 0 auto;
-        margin-top: 12px;
-      }
+    //   @media #{$mq-mobile} {
+    //     margin: 0 auto;
+    //     margin-top: 12px;
+    //   }
 
-      @media #{$mq-laptop} {
-        max-width: $media-max-width;
-      }
-    }
+    //   @media #{$mq-laptop} {
+    //     max-width: $media-max-width;
+    //   }
+    // }
   }
 
   .-raw-html {
