Let the user edit the links and open them in a new tab (wysiwyg)

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -1,4 +1,8 @@
 .vizz-wysiwyg {
+  .cw-quill .ql-bubble .ql-tooltip {
+    z-index: 1;
+  }
+
   .ql-container {
     font-family: $font-family-1;
     font-size: $font-size-normal;
