Improve the scrollbar access of the custum HTML block of the wysiwyg

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -37,7 +37,9 @@
   // button) because it prevents the user from
   // resizing the textarea of the HTML block
   .wysiwyg-grid-column-actions.-inline {
-    height: auto;
+    height: 24px;
+    padding: 0;
+    transform: translate(100%, -50%);
   }
 
   .cw-wysiwyg-item-content.-html,
