--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -3,7 +3,9 @@
     <div class="wrapper">
       <h1>Sites</h1>
       <ul class="action-buttons">
-        <li><%= link_to 'New site', new_admin_site_step_path, class: 'c-button' %></li>
+        <% if @admin %>
+          <li><%= link_to 'New site', new_admin_site_step_path, class: 'c-button' %></li>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -13,15 +15,22 @@
 
 <ul class="c-tabs">
   <li class="tab" aria-selected="true"><a href="/admin/sites/">Sites</a></li>
-  <li class="tab"><a href="/admin/users/">Users</a></li>
-  <li class="tab"><a href="/admin/map_versions/">Maps</a></li>
+  <% if @admin %>
+    <li class="tab"><a href="/admin/users/">Users</a></li>
+    <li class="tab"><a href="/admin/map_versions/">Maps</a></li>
+  <% end %>
 </ul>
 
+<% if @admin %>
+  <% actions =  ['edit', 'delete'] %>
+<% else %>
+  <% actions =  ['edit'] %>
+<% end %>
 <%= javascript_pack_tag 'application' %>
 <%= react_component('AdminTableView', {
   meta: {
     columns: ['title', 'template', 'preview'],
-    actions: ['edit', 'delete']
+    actions: actions
   },
   data: @formattedSites
 } ) %>
