Added the 'Admin' radio button to the user association in site steps

--- a/app/views/admin/site_steps/users.html.erb
+++ b/app/views/admin/site_steps/users.html.erb
@@ -27,6 +27,8 @@
             </div>
             <footer>
               <div class="c-radio">
+                <%= ff.radio_button :role, UserType::ADMIN %>
+                <%= ff.label :role, 'Admin', value:  UserType::ADMIN %>
                 <%= ff.radio_button :role, UserType::MANAGER %>
                 <%= ff.label :role, 'Manager', value:  UserType::MANAGER %>
                 <%= ff.radio_button :role, UserType::PUBLISHER %>
