--- a/app/views/management/dataset_steps/connector.html.erb
+++ b/app/views/management/dataset_steps/connector.html.erb
@@ -9,7 +9,7 @@
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @dataset.id, current_step: step, step_names: @steps_names} %>
 <%= Gon::Base.render_data %>
 
-<%= form_for @dataset, url: wizard_path, method: :put do |f| %>
+<%= form_for @dataset, url: wizard_path, method: :put, html: { multipart: true } do |f| %>
    <div class="l-dataset-creation -connector">
      <div class="wrapper">
        <div class="js-connector"></div>
