Included the new changes requested to the roles feature

--- a/app/views/admin/site_steps/users.html.erb
+++ b/app/views/admin/site_steps/users.html.erb
@@ -28,9 +28,7 @@
             <footer>
               <div class="c-radio">
                 <%= ff.radio_button :role, UserType::ADMIN %>
-                <%= ff.label :role, 'Admin', value:  UserType::ADMIN %>
-                <%= ff.radio_button :role, UserType::MANAGER %>
-                <%= ff.label :role, 'Manager', value:  UserType::MANAGER %>
+                <%= ff.label :role, 'Site Admin', value:  UserType::ADMIN %>
                 <%= ff.radio_button :role, UserType::PUBLISHER %>
                 <%= ff.label :role, 'Publisher', value:  UserType::PUBLISHER %>
               </div>
