--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,7 +14,9 @@
 <ul class="c-tabs">
   <li class="tab"><a href="/admin/sites/">Sites</a></li>
   <li class="tab" aria-selected="true"><a href="/admin/users/">Users</a></li>
-  <li class="tab"><a href="/admin/map_versions/">Maps</a></li>
+  <% if @admin %>
+    <li class="tab"><a href="/admin/map_versions/">Maps</a></li>
+  <% end %>
 </ul>
 
 <%= javascript_pack_tag 'application' %>
