--- a/app/views/management/site_pages/map/_base.html.erb
+++ b/app/views/management/site_pages/map/_base.html.erb
@@ -1,4 +1,5 @@
-<%= form.label :settings, 'General Settings' %>
+<h3>General settings</h3>
+
 <%= form.fields_for :settings, @page.settings_structure do |settings| %>
   <% fields = {
       'webmap': :text_field, 'title': :text_field,
@@ -9,7 +10,16 @@
       'analyticsCode': :text_field, 'iso': :text_field
   } %>
   <% fields.each do |field| %>
-    <%= eval("settings.label :#{field.first}, '#{field.first.capitalize}'") %>
-    <%= eval("settings.#{field.last} :#{field.first}") %>
+    <div class="container">
+      <% if field.last.to_s == 'check_box' %>
+        <div class="c-checkbox">
+          <%= settings.check_box field.first, id: field.first %>
+          <%= settings.label field.first.capitalize, for: field.first %>
+        </div>
+      <% else %>
+        <%= eval("settings.label :#{field.first}, '#{field.first.capitalize}'") %>
+        <%= eval("settings.#{field.last} :#{field.first}") %>
+      <% end %>
+    </div>
   <% end %>
 <% end %>
