Added layer panel and analysis module fields to the map page

--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -43,6 +43,14 @@
           <div class="c-inputs-container -large">
             <%= render partial: 'management/site_pages/map/layer', locals: { form: ff } %>
           </div>
+
+          <div class="c-inputs-container -large">
+            <%= render partial: 'management/site_pages/map/analysis', locals: { form: ff } %>
+          </div>
+
+          <div class="c-inputs-container -large">
+            <%= render partial: 'management/site_pages/map/layer_panel', locals: { form: ff } %>
+          </div>
         <% end %>
 
     </div>
