json editor for analysis module and layer panel

--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/codemirror.min.css">
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/5.26.0/jsoneditor.css" rel="stylesheet" />
   <%= stylesheet_link_tag 'management/application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <script src="//cdn.quilljs.com/1.2.0/quill.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/codemirror.min.js"></script>
@@ -15,6 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.22.2/mode/xml/xml.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.24.2/addon/edit/closetag.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pica/2.0.8/pica.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/5.26.0/jsoneditor.js"></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
 </head>
