--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -37,21 +37,21 @@
           <%= f.label :tags %>
           <%= f.text_field :tags_attributes, placeholder: 'tags', value: f.object.tags.pluck(:value).join(' ') %>
         </div>
+      </div>
+
+      <h3>Thumbnail</h3>
+      <div class="c-inputs-container">
         <div class="container">
           <div class="l-site-creation -settings">
             <div class="settings">
               <div class="logo">
-                <h3>Thumbnail</h3>
-                <%= f.file_field :thumbnail, id: 'thumbnail', accept: 'image/*', 'data-type': 'image'%>
                 <%= f.label :thumbnail, value: 'Change thumbnail', for: 'thumbnail', tabindex: '0' %>
+                <%= f.file_field :thumbnail, id: 'thumbnail', accept: 'image/*', 'data-type': 'image', class: 'js-data-path', placeholder: 'Select a file' %>
+                <div class="js-fake-input"></div>
                 <% if !@page.thumbnail.nil? && @page.thumbnail_file_name %>
-                <div class="preview js-preview">
-                  <%= image_tag @page.thumbnail.url, alt: 'Logo image' %>
-                </div>
-                <% else %>
-                <div class="placeholder js-placeholder">
-                  <span>Select file</span>
-                </div>
+                  <div class="preview js-preview">
+                    <%= image_tag @page.thumbnail.url, alt: 'Logo image' %>
+                  </div>
                 <% end %>
               </div>
             </div>
