--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,8 @@
 
 <body <%= yield :body_class %>>
   <%= Gon::Base.render_data %>
-  <%= render 'front/menu' %>
-  <%= render 'front/icons' %>
+  <%= render 'front/menu' unless @remove_header %>
+  <%= render 'front/icons' unless @remove_header %>
 
   <%= yield %>
   <div class="flash_container">
@@ -75,6 +75,6 @@
       }
     })
   </script>
-   
+
 </body>
 </html>
