--- a/app/views/site_page/map_report.html.erb
+++ b/app/views/site_page/map_report.html.erb
@@ -19,8 +19,9 @@
   <div class="results-container" id="results-container"></div>
 </div>
 
+
 <% content_for :external_js do %>
-  <script id="report-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
+  <script id="report-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/sprint2/reportLib.<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
   <script>
     var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].to_s.squish.gsub("'", %q(\\\')).html_safe %>')
 
@@ -28,7 +29,6 @@
       title: '<%= @site_page.site.name %>'
     });
 
-    debugger;
     var triggerCustom = function() {
       const subscriptions = [{
         'type': 'subscription',
