--- a/app/views/site_page/map_report.html.erb
+++ b/app/views/site_page/map_report.html.erb
@@ -23,7 +23,7 @@
 <% content_for :external_js do %>
   <script id="report-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/sprint2/reportLib.<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
   <script>
-    var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].to_s.squish.gsub("'", %q(\\\')).html_safe %>')
+    var mapDatabaseConfig = JSON.parse('<%= @map_content %>')
 
     var mapConfig = Object.assign(mapDatabaseConfig, {
       title: '<%= @site_page.site.name %>'
