Improved the search feature

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -92,7 +92,7 @@
             </ul>
           </div>
         </div>
-      <% end %>    
+      <% end %>
     <div class="menu-container">
       <div class="menu">
         <ul>
@@ -110,13 +110,13 @@
                         <% if @site_page.site_template.name == 'INDIA' %>
                             <% if child_page.name == "About" %>
                               <%= link_to "About the Atlas", child_page.url %>
-                            
+
                             <% elsif child_page.name == "Atlas" %>
                               <%= link_to "Launch Atlas", child_page.url %>
                             <% else %>
                               <%= link_to child_page.name, child_page.url %>
                             <% end %>
-                              
+
                         <% else %>
                           <%= page_link child_page %>
                         <% end %>
@@ -131,6 +131,9 @@
                 <% end -%>
               </li>
           <% end -%>
+          <li>
+            <a href="<%= search_results_path(id: @site_page.site_id) %>">Search</a>
+          </li>
         </ul>
         <ul>
           <li class="notranslate js-language-selector"></li>
