--- a/app/views/site_page/search_results.html.erb
+++ b/app/views/site_page/search_results.html.erb
@@ -4,7 +4,7 @@
   site: @site_page.site,
   search: @search_string,
   page: @page_number,
-  totalPages: 1,
+  totalPages: @total_pages,
   results: @search_results
 }) %>
 
