--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -60,6 +60,14 @@
         </div>
 
         <div class="card -footer-at-bottom">
+          <h3 class="title">Search Results</h3>
+          <p class="description">Add a search resuls page.</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::SEARCH_RESULTS}, class: 'c-button'  %>
+          </div>
+        </div>
+
+        <div class="card -footer-at-bottom">
           <h3 class="title">Map</h3>
           <p class="description">Add another map.</p>
           <div class="footer">
