Bug fixes in map editor

--- a/app/views/management/site_pages/map/_language.html.erb
+++ b/app/views/management/site_pages/map/_language.html.erb
@@ -5,10 +5,10 @@
       'language': %w[en fr pt es ka id zh],
       'useAlternativeLanguage': :check_box,
       'alternativeLanguage': ['', :en, :fr, :pt, :es, :ka, :id, :zh],
-      'alternativeWebMap': :text_field,
+      'alternativeWebmap': :text_field,
       'alternativeLanguageTitle': :text_field,
       'alternativeLanguageSubtitle': :text_field,
-      'alternativeNarrative': :text_field,
+      'alternativeNarrative': :text_area,
       'alternativeWebmapMenuName': :text_field
   } %>
   <% fields.each do |field| %>
