switching json editor code mode

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -11,6 +11,7 @@
       var analysisModulesInput = document.getElementById('site_page_content_settings_analysisModules');
       var analysisModulesContainer = document.getElementById('analysisModules');
       var analysisModulesEditor = new JSONEditor(analysisModulesContainer, {
+        mode: 'code',
         onChangeJSON: function(json) {
           analysisModulesInput.value = JSON.stringify(json);
         }
